--- a/Frontends/ECommerce.WebUI/Views/Default/Index.cshtml
+++ b/Frontends/ECommerce.WebUI/Views/Default/Index.cshtml
@@ -16,4 +16,5 @@
 </div>
 
 @await Component.InvokeAsync("_CarouselDefaultComponentPartial")
+@await Component.InvokeAsync("_FeatureDefaultComponentPartial")
 
