--- a/Frontends/ECommerce.WebUI/Views/Default/Index.cshtml
+++ b/Frontends/ECommerce.WebUI/Views/Default/Index.cshtml
@@ -20,4 +20,5 @@
 @await Component.InvokeAsync("_CategoriesDefaultComponentPartial")
 @await Component.InvokeAsync("_FeatureProductsDefaultComponentPartial")
 @await Component.InvokeAsync("_OfferDiscountDefaultComponentPartial")
+@await Component.InvokeAsync("_VendorDefaultComponentPartial")
 
